2008-07-09  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (STAT-VFS):
	use the right SIZEOF_* conditionals
	(FILE_FUNCTION2): add a cast to fix g++ compilation

2008-07-09  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2014262 ]: float/rational comparison underflows
	* realelem.d (R_R_comp): inhibit floating-point-underflow when
	converting to a rational

2008-07-08  Sam Steingold  <sds@gnu.org>

	* spvw_sigcld.d (end_want_sigcld): avoid the gcc warning:
	suggest a space before ';' or explicit braces

2008-07-08  Sam Steingold  <sds@gnu.org>

	* makemake.in (srcdir) [CROSS]: do not overwrite
	(module_configure_flags) [CROSS]: add --build=${TSYS}
	Reported by Luca Capello <luca@pca.it>

2008-07-08  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.46+ (2008-07-08)

2008-07-07  Sam Steingold  <sds@gnu.org>

	* m4/shm.m4 (CL_SHM_H): run before CL_SHM
	(CL_SHM): require CL_SHM_H, do not set have_shm
	* m4/shm-rmid.m4 (CL_SHM_RMID): use cl_cv_sys_shm_works
	instead of have_shm

2008-07-07  Sam Steingold  <sds@gnu.org>

	* _clisp.c (main): "-t"[raditional] does not take an argument

2008-07-06  Bruno Haible  <bruno@clisp.org>

	Remove MULTIMAP_MEMORY_VIA_SHM and MULTIMAP_MEMORY.
	It cannot compete with SINGLEMAP_MEMORY because it
	1. consumes a lot more memory for page tables, and
	2. hampers swapping in kernels without reverse mapping pointers.
	* lispbibl.d (MULTIMAP_MEMORY_VIA_SHM, MULTIMAP_MEMORY): Don't define.
	* spvw.d (canonaddr, canon): Remove macros.
	(MULTIMAP_MEMORY_SYMBOL_TAB): Remove macro.
	(init_memory, main): Update.
	* spvw_fault.d (xmmprotect): Remove macro/function.
	(handle_read_fault, handle_readwrite_fault, handle_fault)
	(handle_fault_range): Update.
	* spvw_genera1.d (xmprotect_old_generation_cache): Renamed from
	xmmprotect_old_generation_cache.
	(in_old_generation_0, in_old_generation_1, in_old_generation)
	(build_old_generation_cache, rebuild_old_generation_cache)
	(gc_check_at): Update.
	* spvw_genera3.d (update_old_generation): Update.